--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -22,29 +22,25 @@ const projectData = await useSanityClient().fetch(query);
 const blogData = await useSanityClient().fetch(blogquery);
 ---
 
-
-
-<section class="home-section px-4 font-Roboto">
+<section class="home-section px-4 font-Roboto h-screen w-auto">
   <div class="container mx-auto">
-    <div class="grid grid-cols-1 md:gap-2 gap-12 text-center text-white">
+    <div class="grid grid-cols-1 md:gap-2 gap-12 text-center justify-center ">
       <div
-        class="about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-24 font-Roboto"
+        class="text-primaryColor about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-18 font-Roboto"
       >
-        <h1 class="text-4xl py-3">Hii, This Is Tanuj</h1>
-        <p class="text-3xl py-3">Frontend Developer!</p>
-        <!-- Button trigger modal -->
+        <h1 class="text-4xl py-2">Hii, This Is Tanuj</h1>
+        <p class="text-3xl py-2">Frontend Developer!</p>
         <button
           type="button"
-          class="btn btn-primary text-2xl py-3 hover:text-slate-400"
+          class="btn btn-primary text-secondaryColor text-2xl py-3 hover:text-slate-400"
           onclick="downloadResume()"
         >
-        Get Resume 
+          Get Resume
         </button>
       </div>
     </div>
 
-    <!-- Projects -->
-    <div class="projects container mx-auto py-5 text-white">
+    <div class="projects h-full container mx-auto  text-white my-10 py-10">
       <div class="flex justify-between items-center">
         <h1
           class="text-white font-Roboto md:text-xl text-sm font-normal pt-8 pb-6"
@@ -55,68 +51,60 @@ const blogData = await useSanityClient().fetch(blogquery);
           <a
             href="/projects"
             class="font-Roboto md:text-xl text-sm font-normal pt-8 pb-6 hover:text-slate-400"
+            >View All</a
           >
-            View All
-          </a>
         </div>
       </div>
 
       <div class="grid md:grid-cols-3 grid-cols-1 gap-3">
         {
-          projectData?.map((projectItem) => {
-            return (
-              <>
-                <div class=" rounded-lg overflow-hidden shadow-lg projects-card  hover:mx-1 hover:shadow-xl transition-transform duration-300 transform hover:scale-105">
-                  <a href="#">
-                    <img
-                      class="rounded-t-lg h-72 w-full object-cover"
-                      src={`${projectItem?.BackgroundImage?.asset?.url}`}
-                    />
-                  </a>
+          projectData?.map((projectItem) => (
+            <div class=" h-auto  rounded-lg projects-card overflow-hidden shadow-lg hover:mx-1 hover:shadow-xl transition-transform duration-1000 transform hover:scale-105">
+              <img
+                  class="w-full h-52 mb-8"
+                  src={`${projectItem?.BackgroundImage?.asset?.url}`}
+                />
+              <div class="px-4 py-4 mt-4">
+               
 
-                  <div class="p-5">
-                    <a href="#">
-                      <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                        {projectItem?.projectName}
-                      </h5>
-                    </a>
-                    <PortableText
-                      class="mb-3 font-normal text-gray-700 dark:text-gray-400  text-base font-Roboto"
-                      value={projectItem?.excerpt}
-                    />
+                <h5 class="mb-2 text-lg font-sans  font-bold text-primaryColor">
+                  {projectItem?.projectName}
+                </h5>
 
-                    <a
-                      href={`/projects/${projectItem.slug.current}`}
-                      class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >
-                      Read more
-                      <svg
-                        class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 14 10"
-                      >
-                        <path
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M1 5h12m0 0L9 1m4 4L9 9"
-                        />
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </>
-            );
-          })
+                <PortableText
+                  class="text-sm font-Roboto text-secondaryColor"
+                  value={projectItem?.excerpt}
+                />
+
+                <a
+                  href={`/projects/${projectItem.slug.current}`}
+                  class="inline-flex items-center px-3 py-2 mt-6 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                >
+                  Read more
+                  <svg
+                    class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 14 10"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M1 5h12m0 0L9 1m4 4L9 9"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          ))
         }
       </div>
     </div>
 
-    <!-- Blogs -->
-    <div class="blogs container mx-auto text-white py-5">
+    <div class="blogs h-screen container mx-auto text-white my-10 py-10">
       <div class="flex justify-between items-center">
         <h1 class="text-white font-Roboto md:text-lg text-sm pt-8 pb-6">
           Blogs
@@ -124,65 +112,59 @@ const blogData = await useSanityClient().fetch(blogquery);
         <div class="max-w-sm border-gray-200 rounded-lg">
           <a
             class="font-Roboto md:text-lg text-lg font-normal hover:text-slate-400"
-            href="/blogs"
-          >
-            View All</a
+            href="/blogs">View All</a
           >
         </div>
       </div>
 
       <div class="grid md:grid-cols-3 grid-cols-1 gap-3">
         {
-          blogData?.map((projectItem) => {
-            console.log(projectItem);
-
-            return (
-              <>
-                <div class=" rounded-lg overflow-hidden shadow-lg projects-card  hover:mx-1 hover:shadow-xl transition-transform duration-300 transform hover:scale-105">
-                  <a href="#">
-                    <img
-                      class="rounded-t-lg"
-                      src={`${projectItem?.FeatureImage?.asset?.url}`}
-                      alt=""
-                    />
-                  </a>
-
-                  <div class="p-5">
-                    <a href="#">
-                      <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                        {projectItem?.projectName}
-                      </h5>
-                    </a>
-                    <PortableText
-                      class="text-base mb-2 text-gray-900  blog-content"
-                      value={projectItem?.excerpt}
-                    />
-                    <a
-                      href={`/blogs/${projectItem.slug.current}`}
-                      class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none "
-                    >
-                      Read more
-                      <svg
-                        class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 14 10"
-                      >
-                        <path
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M1 5h12m0 0L9 1m4 4L9 9"
-                        />
-                      </svg>
-                    </a>
-                  </div>
+          blogData?.map((blogItem) => (
+          <div class="projects-card h-full flex flex-col  rounded-lg overflow-hidden shadow-lg hover:mx-1 hover:shadow-xl transition-transform duration-1000 transform hover:scale-105">
+              <img
+                class="rounded-t-lg w-full h-52"
+                src={`${blogItem?.FeatureImage?.asset?.url}`}
+                alt=""
+              />
+              <div class="p-5">
+                <h5 class="mb-2 text-lg font-sans font-bold tracking-tight text-primaryColor ">
+                  {blogItem?.projectName}
+                </h5>
+                <div
+                  class="text-sm mb-2 text-gray-900 overflow-hidden"
+                  style="max-height: 6rem;"
+                >
+                  <PortableText
+                    class="text-sm mb-2 text-secondaryColor"
+                    value={blogItem?.excerpt}
+                  />
+                
                 </div>
-              </>
-            );
-          })
+
+                <a
+                  href={`/blogs/${blogItem.slug.current}`}
+                  class="inline-flex items-center px-3 mt-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none "
+                >
+                  Read more
+                  <svg
+                    class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 14 10"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M1 5h12m0 0L9 1m4 4L9 9"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          ))
         }
       </div>
     </div>
@@ -191,13 +173,13 @@ const blogData = await useSanityClient().fetch(blogquery);
 
 <script is:inline>
   function downloadResume() {
-    const resumeUrl = '/Resume.pdf'; // Adjust the path based on your actual file structure
-    
+    const resumeUrl = "/Resume.pdf"; // Adjust the path based on your actual file structure
+
     // Create a link element
-    const link = document.createElement('a');
+    const link = document.createElement("a");
     link.href = resumeUrl;
-    link.target = '_blank'; // Open in a new tab
-    link.download = 'resume.pdf'; // Set the desired name for the downloaded file
+    link.target = "_blank"; // Open in a new tab
+    link.download = "resume.pdf"; // Set the desired name for the downloaded file
 
     // Append the link to the body
     document.body.appendChild(link);
