--- a/src/components/ProjectsLayout/ProjectLayouts.astro
+++ b/src/components/ProjectsLayout/ProjectLayouts.astro
@@ -8,7 +8,8 @@ const data = Astro.props;
 <section
   class="project-section container mx-auto md:px-0 px-4 py-4 font-Roboto"
 >
-  <div class="grid md:grid-cols-2 grid-cols-1 gap-4 md:gap-4 mt-10">
+  <h1 class="text-center text-4xl font-Roboto text-slate-50">My Works</h1>
+  <div class="grid md:grid-cols-2 grid-cols-1 gap-4 md:gap-4 mt-10 md:px-12">
     {
       data.projectData?.map((projectItem) => {
         return (
@@ -19,35 +20,32 @@ const data = Astro.props;
                 externalInNewTab={true}
               >
                 <div class="max-w-full rounded overflow-hidden shadow-lg projects-card h-auto flex-col text-gray-700">
-                  <img
-                    class="w-full "
-                    src={`${projectItem?.BackgroundImage?.asset?.url}`}
-                    alt="portfolio_image"
-                  />
+                  <img class=" h-72 w-full" src={`${projectItem?.BackgroundImage?.asset?.url}`}/>
                   <div class="info-section px-4">
-                    <div class="py-4 ">
-                      <div class="font-Roboto font-normal md:text-2xl text-sm mb-2">
+                  
+                    <div class="py-4">
+                      <div class="font-Sans text-primaryColor  md:text-xl font-semibold text-sm mb-2">
                         {projectItem?.projectName}
                       </div>
-                      <p class=" text-base  font-Roboto font-normal">
+                      <p class="text-base font-Roboto font-normal">
                         <PortableText
-                          class="font-normal md:text-sm text-sm mb-2 font-Roboto "
+                          class="text-secondaryColor"
                           value={projectItem?.excerpt}
                         />
                       </p>
                     </div>
-                    <div>
+                    <div class="md:h-20 h-auto">
                       {projectItem?.tags?.map((tagsItem) => {
                         return (
                           <>
-                            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-bae font-medium font-Roboto mr-2 mb-2">
+                            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-medium font-Roboto mr-2 mb-2">
                               {tagsItem}
                             </span>
                           </>
                         );
                       })}
                     </div>
-                    <div class="py-4">
+                    <div class="py-4 text-secondaryColor">
                       <a href={projectItem?.gitHubLink?.current}>Github link</a>
                       &nbsp;|&nbsp;
                       <a href={projectItem?.demoLink?.current}>Demo Link</a>
