--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -13,7 +13,7 @@ import { PortableText } from "astro-portabletext";
     >
       <header class="mb-4 lg:mb-6 not-format">
         <h1
-          class="mb-4 text-3xl font-extrabold leading-tightlg:mb-6 lg:text-4xl dark:text-white"
+          class="mb-4 text-3xl font-extrabold leading-tightlg:mb-6 lg:text-4xl dark:text-white items-center"
         >
           {data?.detailsData?.projectName}
         </h1>
