--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -48,6 +48,12 @@ const firstPost = await useSanityClient().fetch(query);
 </header>
 
 <style>
+
+.active-link {
+  text-decoration: underline;
+  text-decoration-color: gray;
+}
+
   /* Add styles for transparent background and shadow */
   #header.transparent {
     border-color: rgba(255, 255, 255, 0.1);
