--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -1,15 +1,23 @@
 ---
 const data = Astro.props;
-import { Link } from "astro-link";
+console.log('blogDetails',data)
+
 import { PortableText } from "astro-portabletext";
+import PortableTextImage from "./PortableTextImage.astro";
+
+const components ={
+  type:{
+    image:PortableTextImage
+  }
+}
 ---
 
 <main
   class="pt-8  lg:pt-10 lg:pb-24 bg-transparent text-white antialiased  container mx-auto"
 >
-  <div class="flex justify-between px-4 mx-auto max-w-screen-xl projects-card py-20">
+  <div class="flex justify-between px-4 mx-auto max-w-screen-xl  py-20">
     <article
-      class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue dark:format-invert"
+      class="mx-auto w-full max-w-2xl format format-sm sm:format-base lg:format-lg format-blue "
     >
       <header class="mb-4 lg:mb-6 not-format">
         <h1
@@ -24,10 +32,9 @@ import { PortableText } from "astro-portabletext";
       </figure>
       
         <div class="blog-details-content">
-          <PortableText
-           
-            value={data?.detailsData?.blogcontent}
-          />
+          <PortableText value={data?.detailsData?.blogcontent}
+          components={components}
+        />
         </div>
       
     </article>
