--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -1,6 +1,9 @@
 ---
 import { useSanityClient, groq } from "astro-sanity";
-import { PortableText } from "astro-portabletext";
+import BlogSlider from "../components/Slider/BlogSlider.jsx";
+import ProjectSlider from "./Slider/ProjectSlider";
+
+import { Icon } from "astro-icon/components";
 const query = groq`*[_type == "projects"]{
         ...,
         BackgroundImage{
@@ -24,15 +27,18 @@ const blogData = await useSanityClient().fetch(blogquery);
 
 <section class="home-section px-4 font-Roboto h-screen w-auto">
   <div class="container mx-auto">
-    <div class="grid grid-cols-1 md:gap-2 gap-12 text-center justify-center ">
+    <div class="grid grid-cols-1 md:gap-2 gap-12 text-center justify-center">
       <div
         class="text-primaryColor about_section border-e-red-50 flex flex-col items-center justify-center lg:p-24 p-0 m-10 md:m-18 font-Roboto"
       >
-        <h1 class="text-4xl py-2">Hii, This Is Tanuj</h1>
-        <p class="text-3xl py-2">Frontend Developer!</p>
+        <h1 class="lg:text-4xl text-base py-1">Hii, I am Tanuj Pandey</h1>
+        <p class="lg:text-xl py-1 text-sm lg:px-28">
+          A Result-Oriented Web Developer building and managing Websites and Web
+          Applications that leads to the success of the overall product
+        </p>
         <button
           type="button"
-          class="btn btn-primary text-secondaryColor text-2xl py-3 hover:text-slate-400"
+          class="btn btn-primary text-secondaryColor lg:text-2xl py-3 hover:text-slate-400 text-base"
           onclick="downloadResume()"
         >
           Get Resume
@@ -40,132 +46,109 @@ const blogData = await useSanityClient().fetch(blogquery);
       </div>
     </div>
 
-    <div class="projects h-full container mx-auto  text-white my-10 py-10">
-      <div class="flex justify-between items-center">
-        <h1
-          class="text-white font-Roboto md:text-xl text-sm font-normal pt-8 pb-6"
+    <!-- Work stduy -->
+
+    <div class="expreince Section h-auto">
+      <h4 class="text-white text-4xl py-3">Professional Experience</h4>
+
+      <details>
+        <summary
+          class="bg-secondaryBg p-4 text-white rounded-lg flex justify-between items-center"
+          ><div>Frontend Developer <span class="lg:px-4">@Scube.co</span></div>
+          <div class="mx-12">2022 - 2024</div></summary
         >
-          My Projects
+        <div class="bg-primaryColor p-10 mt-2 ">
+          <div class="flex lg:flex-row flex-col justify-between items-center">
+            <div class="left_wrapper">
+              <div class="flex flex-row text-white gap-1 items-center">
+                <Icon name="svg" size={20} />
+                <p>Remote</p>
+                <a href="https://www.scube.co/" target="_blank" class="px-2"
+                  >Scube.co</a
+                >
+              </div>
+  
+              <div class="pt-1 text-white">
+                <p>
+                  Developing Frontend Applications on Nextjs/ReactJs framework
+                  with Headless Cms.
+                </p>
+              </div>
+            </div>
+  
+        
+              <div class="company_logo pt-3">
+                <img src="/img/SCUBE.webp" class="w-50 h-auto">
+              </div>
+    
+          </div>
+        
+          <div class="py-4  gap-6">
+            <span
+              class="bg-red-100 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >Javascript</span
+            >
+            <span
+              class="bg-blue-500 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >Nextjs</span
+            >
+            <span
+              class="bg-green-500 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >TailWind</span
+            >
+            <span
+              class="bg-blue-500 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >Sanity</span
+            >
+            <span
+              class="bg-slate-500 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >Contentful</span
+            >
+
+            <span
+              class="bg-violet-500 text-white-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+              >Mui</span
+            >
+          </div>
+        </div>
+      </details>
+    </div>
+
+    <!-- Works Section -->
+
+    <div
+      class="projects h-auto container mx-auto text-white  w-full"
+    >
+      <div class="flex justify-between items-center">
+        <h1 class="text-white font-Roboto text-base font-normal pt-8 pb-6">
+          My Works
         </h1>
         <div class="max-w-sm border-gray-200 rounded-lg">
           <a
             href="/projects"
-            class="font-Roboto md:text-xl text-sm font-normal pt-8 pb-6 hover:text-slate-400"
+            class="font-Roboto text-base font-normal pt-8 pb-6 hover:text-slate-400"
             >View All</a
           >
         </div>
       </div>
-
-      <div class="grid md:grid-cols-3 grid-cols-1 gap-3">
-        {
-          projectData?.map((projectItem) => (
-            <div class=" h-auto  rounded-lg projects-card overflow-hidden shadow-lg hover:mx-1 hover:shadow-xl transition-transform duration-1000 transform hover:scale-105">
-              <img
-                  class="w-full h-52 mb-8"
-                  src={`${projectItem?.BackgroundImage?.asset?.url}`}
-                />
-              <div class="px-4 py-4 mt-4">
-               
-
-                <h5 class="mb-2 text-lg font-sans  font-bold text-primaryColor">
-                  {projectItem?.projectName}
-                </h5>
-
-                <PortableText
-                  class="text-sm font-Roboto text-secondaryColor"
-                  value={projectItem?.excerpt}
-                />
-
-                <a
-                  href={`/projects/${projectItem.slug.current}`}
-                  class="inline-flex items-center px-3 py-2 mt-6 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >
-                  Read more
-                  <svg
-                    class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 14 10"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M1 5h12m0 0L9 1m4 4L9 9"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
-          ))
-        }
+      <div class="lg:px-96 sm:px-0 item-center">
+        <ProjectSlider projectData={projectData} client:load />
       </div>
     </div>
 
-    <div class="blogs h-screen container mx-auto text-white my-10 py-10">
+    <!--  Blogs Section -->
+    <div class="blogs h-auto container mx-auto text-white">
       <div class="flex justify-between items-center">
-        <h1 class="text-white font-Roboto md:text-lg text-sm pt-8 pb-6">
-          Blogs
-        </h1>
+        <h1 class="text-white font-Roboto text-base pt-8 pb-6">Blogs</h1>
         <div class="max-w-sm border-gray-200 rounded-lg">
           <a
-            class="font-Roboto md:text-lg text-lg font-normal hover:text-slate-400"
+            class="font-Roboto text-base font-normal hover:text-slate-400"
             href="/blogs">View All</a
           >
         </div>
       </div>
-
-      <div class="grid md:grid-cols-3 grid-cols-1 gap-3">
-        {
-          blogData?.map((blogItem) => (
-          <div class="projects-card h-full flex flex-col  rounded-lg overflow-hidden shadow-lg hover:mx-1 hover:shadow-xl transition-transform duration-1000 transform hover:scale-105">
-              <img
-                class="rounded-t-lg w-full h-52"
-                src={`${blogItem?.FeatureImage?.asset?.url}`}
-                alt=""
-              />
-              <div class="p-5">
-                <h5 class="mb-2 text-lg font-sans font-bold tracking-tight text-primaryColor ">
-                  {blogItem?.projectName}
-                </h5>
-                <div
-                  class="text-sm mb-2 text-gray-900 overflow-hidden"
-                  style="max-height: 6rem;"
-                >
-                  <PortableText
-                    class="text-sm mb-2 text-secondaryColor"
-                    value={blogItem?.excerpt}
-                  />
-                
-                </div>
-
-                <a
-                  href={`/blogs/${blogItem.slug.current}`}
-                  class="inline-flex items-center px-3 mt-3 py-2 text-sm font-medium text-center text-white bg-buttonBg rounded-lg hover:bg-slate-500  hover:text-black focus:ring-4 focus:outline-none "
-                >
-                  Read more
-                  <svg
-                    class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 14 10"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M1 5h12m0 0L9 1m4 4L9 9"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
-          ))
-        }
+      <div class="xs:px-30">
+        <BlogSlider blogData={blogData} client:load />
       </div>
     </div>
   </div>
