--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Sidebar from "../components/Sidebar.astro";
-
+import Footer from  "../components/Footer.astro";
 interface Props {
   title: string;
 }
@@ -20,7 +20,9 @@ const { title } = Astro.props;
 
   <body>
     <Sidebar />
+    
     <slot />
+    <Footer/>
     <div class="cursor"></div>
     <div class="cursor2"></div>
   </body>
@@ -82,18 +84,12 @@ const { title } = Astro.props;
     opacity: 0.5;
   }
   body {
-    background-color:rgba(4, 6, 21, 0.9);
+    background-color: rgba(4, 6, 21, 0.9);
     /* background: linear-gradient(145deg, rgba(4, 6, 21, 1), rgba(0, 0, 0, 0.8)); */
     background-size: center;
     height: 100%;
-    width:100%;
-  
-    
+    width: 100%;
   }
-
- 
-
-
 
   .home-section {
     width: 100%;
@@ -120,7 +116,7 @@ const { title } = Astro.props;
   .projects-card {
     background-color: var(--bg1);
     border-radius: 10px;
-    border-color:var(--bg2)
+    border-color: var(--bg2);
   }
 
   /* .....Blog details */
@@ -135,19 +131,17 @@ const { title } = Astro.props;
     text-decoration: underline;
   }
 
-  .blog-details-content strong{
-    font-size:18px;
-    line-height:42px;
-  margin:40px 0px;
-
+  .blog-details-content strong {
+    font-size: 22px;
+    line-height: 36px;
+    margin: 40px 0px;
   }
 
-  .blog-details-content li{
-    font-size:16px;
-    line-height:24px;
-    padding:5px 0px;
+  .blog-details-content li {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 5px 0px;
   }
-
 
   /* >.Blog Page */
 
@@ -161,6 +155,7 @@ const { title } = Astro.props;
     
   } */
 
+
   @media only screen and (max-width: 768px) {
     body {
       background: linear-gradient(90deg, #131313);
@@ -173,7 +168,6 @@ const { title } = Astro.props;
 
     /* ....Projects Cards */
 
-   
     /* .....Blog details */
 
     .blog-content a {
