--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -52,7 +52,7 @@ import { Icon } from "astro-icon/components";
         document.write(new Date().getFullYear());
       </script>2024 . Made by
       <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-        >Tanuj Padney</a
+        >Tanuj Pandey</a
       >
     </div>
   </div>
