--- a/src/components/HomeLayout.astro
+++ b/src/components/HomeLayout.astro
@@ -131,7 +131,7 @@ const blogData = await useSanityClient().fetch(blogquery);
           >
         </div>
       </div>
-      <div class="lg:px-96 sm:px-0 item-center">
+      <div class=" sm:px-0 item-center">
         <ProjectSlider projectData={projectData} client:load />
       </div>
     </div>
