--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,20 +6,24 @@ import ProjectSlider from "./Slider/ProjectSlider";
 import { Icon } from "astro-icon/components";
 ---
 
-<section class="footer-section font-Roboto w-auto bg-primaryColor h-auto py-20 lg:mt-12 sm:mt-10 mt-96 px-4 ">
+<section
+  class="footer-section font-Roboto w-auto bg-primaryColor h-auto py-20 lg:mt-12 sm:mt-10 mt-96 px-4"
+>
   <div class="container mx-auto">
     <div class="grid md:grid-cols-6 grid-cols-1 mb-10">
-      <div class="text-primaryColor about_section font-Roboto col-span-5 justify-center">
+      <div
+        class="text-primaryColor about_section font-Roboto col-span-5 justify-center"
+      >
         <h1 class="text-xl py-1">Tanuj Pandey</h1>
         <p class="text-base py-1 lg:w-2/3">
           A Frontend focused Web Developer building the Frontend of Websites and
           Web Applications that leads to the success of the overall product
         </p>
       </div>
-      <div class="text-primaryColor font-Roboto  col-span-1">
+      <div class="text-primaryColor font-Roboto col-span-1">
         <h1 class="text-2xl py-1 font-bold uppercase">Social</h1>
         <div class="py-1">
-          <div class="pt-2 pb-2 flex   gap-6 w-3/5">
+          <div class="pt-2 pb-2 flex gap-6 w-3/5">
             <a
               class="hover:shadow-xl transition-transform duration-200 transform hover:scale-105"
               target="_blank"
@@ -47,11 +51,8 @@ import { Icon } from "astro-icon/components";
     <div
       class="main-footer__lower border border-r-0 border-l-0 border-b-0 pt-8 text-center text-white"
     >
-      © Copyright
-      <script>
-        document.write(new Date().getFullYear());
-      </script>2024 . Made by
-      <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
+      © Copyright 2024 . Made by
+      <a rel="noreferrer" target="_blank" href="https://tanujportfoliodev.netlify.app/"
         >Tanuj Pandey</a
       >
     </div>
