--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,12 @@
 import { useSanityClient, groq } from "astro-sanity";
 import BlogSlider from "../components/Slider/BlogSlider.jsx";
 import ProjectSlider from "./Slider/ProjectSlider";
-
+import {motion} from 'framer-motion'
 import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="footer-section font-Roboto w-auto bg-primaryColor h-auto py-20 lg:mt-12 sm:mt-10 mt-96 px-4"
+  class="footer-section font-Roboto w-auto bg-primaryColor h-auto py-20 lg:mt-12 sm:mt-10 mt-96 px-4" data-aos="fade-left"
 >
   <div class="container mx-auto">
     <div class="grid md:grid-cols-6 grid-cols-1 mb-10">
