--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Sidebar from "../components/Sidebar.astro";
-import Footer from  "../components/Footer.astro";
+import Footer from "../components/Footer.astro";
+
 interface Props {
   title: string;
 }
@@ -14,19 +15,27 @@ const { title } = Astro.props;
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
 
   <body>
     <Sidebar />
-    
+
     <slot />
-    <Footer/>
+    <Footer />
     <div class="cursor"></div>
     <div class="cursor2"></div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js" is:inline></script>
+    <script is:inline>
+      AOS.init();
+    </script>
   </body>
 </html>
+
 <style is:global>
   @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
@@ -89,6 +98,7 @@ const { title } = Astro.props;
     background-size: center;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
   }
 
   .home-section {
@@ -154,7 +164,6 @@ const { title } = Astro.props;
     display: inline-block
     
   } */
-
 
   @media only screen and (max-width: 768px) {
     body {
